add profile_img function to signup
